--- a/.gitignore
+++ b/.gitignore
@@ -84,10 +84,9 @@ fabric.properties
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
 .idea/*.iml
+.idea/*.xml
 *.iml
 modules.xml
-.idea/misc.xml
-*.ipr
 
 # Sonarlint plugin
 # https://plugins.jetbrains.com/plugin/7973-sonarlint
