--- a/.gitignore
+++ b/.gitignore
@@ -83,8 +83,7 @@ fabric.properties
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-.idea/*.iml
-.idea/*.xml
+.idea/
 *.iml
 modules.xml
 
